# aws-devsecops-pipeline

./: .gitignore  Jenkinsfile  Jenkinsfile.dev-deploy  Jenkinsfile.infra  README.md
.github/workflows/: infra-gates.yml
Infra-Ensure-cloud/: .gitignore  README.md  buildspec.yaml
Infra-Ensure-cloud/iac/: codepipeline.tf  data.tf  dev-backend.tfvars  dev.tfvars  local.tf  main.tf  prod-backend.tfvars  prod.tfvars  variables.tf  versions.tf
ensure-cloud/: .gitignore  README.md  buildspec-lambda-zips.yaml  buildspec-security-scan.yaml
ensure-cloud/core-change-publisher/: .env.example  Cargo.toml  README.md
ensure-cloud/core-change-publisher/scripts/: bridge-integrated.sh  bridge.sh  dev.sh
ensure-cloud/core-change-publisher/src/: events.rs  main.rs  processor.rs  publisher.rs  settings.rs  systems.rs
ensure-cloud/core-change-publisher/tests/: common.rs  publish.rs
ensure-cloud/headend-api/: .env.example  Cargo.toml  ERRORS.md  README.md
ensure-cloud/headend-api/scripts/: dev.sh
ensure-cloud/headend-api/src/: core_resources.rs  error.rs  events_repo.rs  handlers.rs  identity.rs  main.rs  models.rs  router.rs  secrets.rs  settings.rs  state.rs  systems.rs
ensure-cloud/headend-api/tests/: common.rs  core_endpoints.rs  error_cases.rs  events.rs  health.rs
ensure-cloud/headend-gateway/: .env.example  Cargo.toml  README.md  buildspec-headend-gateway-image.yaml
ensure-cloud/headend-gateway/infra/headend-gateway/: Dockerfile
ensure-cloud/headend-gateway/scripts/: common.sh  dev.sh
ensure-cloud/headend-gateway/src/: client.rs  main.rs  settings.rs  sqs_worker.rs  state.rs
ensure-cloud/headend-gateway/src/routes/: health.rs  mod.rs  websocket.rs
ensure-cloud/headend-gateway/tests/: common.rs  health.rs  websocket.rs
ensure-cloud/infra/: dev.env  docker-compose.yml
ensure-cloud/pki/: .env.example  .gitignore  CA.md  Cargo.toml  README.md
ensure-cloud/pki/infra/pki-api/: Dockerfile  buildspec-pki-api-image.yaml
ensure-cloud/pki/infra/stepca/: Dockerfile  buildspec-stepca-image.yaml
ensure-cloud/pki/scripts/: dev.sh  init-ca-prod.sh
ensure-cloud/pki/src/: ca_client.rs  community.rs  error.rs  main.rs  settings.rs  state.rs
ensure-cloud/pki/src/routes/: certificates.rs  health.rs  mod.rs
ensure-cloud/pki/tests/: certificates.rs  common.rs  health.rs
ensure-cloud/scripts/: check.sh  common.sh  dev.sh  init-ca-dev.sh  integrated-dev.sh
infra/: README.md
infra-sentrics-core/: README.md  buildspec.yaml
infra-sentrics-core/iac/: .terraform.lock.hcl  api_gateway.tf  codepipeline.tf  data-sources.tf  dev-backend.tfvars  dev.tfvars  dynamodb.tf  ecs-cluster.tf  iam.tf  lambda.tf  local.tf  outputs.tf  prod-backend.tfvars  prod.tfvars  rds.tf  security_group.tf  sns.tf  sqs.tf  variables.tf  versions.tf  yardi-sync-taskdef.json.template
infra/iac/: api_gateway.tf  data-sources.tf  dev-backend.tfvars  dev.tfvars  dynamodb.tf  ecs-cluster.tf  guardduty.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  prod-backend.tfvars  prod.tfvars  rds.tf  security_group.tf  sns.tf  sqs.tf  variables.tf  versions.tf  yardi-sync-taskdef.json.template
scripts/: check.sh  common.sh
scripts/ci/: prereqs.sh  security.sh
scripts/jenkins/: setup-jenkins-agent.sh
sentrics-core/: .gitignore  AGENTS.md  Cargo.toml  README.md  buildspec-lambda-zips.yaml  buildspec-security-scan.yaml  buildspec-yardi-sync.yaml
sentrics-core/infra/: dev.env  docker-compose.yml
sentrics-core/resources-api/: .env.example  Cargo.toml  ERRORS.md  README.md
sentrics-core/resources-api/.sqlx/: query-052c48b571cfb6393083e9df483101812f2e193cccd0391efae2b5e0a5744be1.json  query-14ad9147ea766f5ed6bf9e0c47057fee169a1c3c986f5eb519fa061b091e7864.json  query-5bc2e3a98c32fab7da70985e477ab6df26e856c4be3768792f178775f6cc7075.json  query-6789c14a20cfad5c9a2cf494be2eed4841b2ab03fac6b38ac08b1de7ea4f8437.json  query-7b968838cf4b4ccd5fc2e6cea2ec458ef3345aa479f7006d5510e47cef199186.json  query-869877ced6beccde00cb61c0a606a34a423c736796a2e09305a5cce7f91ee1fb.json  query-8c5eb990a272328b69a48bff486a024ab571adc9e3e2502374e4bbd15117b909.json  query-8eed842d53998f17ce5147da79d9eec2022d96eb5a4a36d36236c3eeeaa44d89.json  query-ab253f566dbf420a175589b68f04a8c427238cd4e1535fc5753fdb20005cc566.json  query-b0280283188d2d68e469e96ad8879233db4b49334b2dbebbd8fb666f3947ab93.json  query-b922a9e9b5e36e633106ad84c1847f58b7a79ba6fa7eb102a7e45e15b4fe389b.json  query-cc48a0f0109d363dafaabd0eef0534e17b6f8413ec43494a8b4048a75ddca63d.json  query-d68be08a271fe776e279936155f6bde17c8b2fbbf1c2cf5613aa8ae333610b46.json  query-e07e915eb8f9dfaa28da505647337491596b39f3dec018dfb55ececbe8ad6ecc.json
sentrics-core/resources-api/migrations/: 20251222183444_create_initial_schema.sql
sentrics-core/resources-api/scripts/: common.sh  dev.sh  migrate.sh  prepare_offline.sh
sentrics-core/resources-api/src/: error.rs  events.rs  main.rs  models.rs  requester.rs  router.rs  state.rs
sentrics-core/resources-api/src/handlers/: communities.rs  locations.rs  mod.rs  residents.rs
sentrics-core/resources-api/tests/: communities.rs  cors.rs  events.rs  health.rs  locations.rs  residents.rs
sentrics-core/resources-change-logger/: .env.example  Cargo.toml  README.md
sentrics-core/resources-change-logger/scripts/: bridge.sh  common.sh  dev.sh
sentrics-core/resources-change-logger/src/: events.rs  main.rs  processor.rs  settings.rs  storage.rs
sentrics-core/resources-change-logger/tests/: change_event_logging.rs
sentrics-core/scripts/: check.sh  (+3 more)
sentrics-core/yardi-sync/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md
sentrics-core/yardi-sync/docs/: mock-yardi-seed.md  resources-api-yardi-seed.md
sentrics-core/yardi-sync/infra/yardi-sync/: Dockerfile
sentrics-core/yardi-sync/scripts/: common.sh  dev.sh
sentrics-core/yardi-sync/src/: failure_publisher.rs  main.rs  models.rs  resources_client.rs  resources_event_consumer.rs  settings.rs  state.rs  sync_engine.rs  timeouts.rs  yardi_client.rs
sentrics-core/yardi-sync/tests/: sync.rs
sentrics-core/yardi-sync/tests/common/: aws.rs  mock_yardi.rs  mod.rs  resources.rs
(+33 files in other folders)
