[package]
name = "headend-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "headend-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-ssm = "1"
aws-sigv4 = "1"
axum = "0.8"
bson = "3"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
futures-util = "0.3"
lambda_http = "1"
mongodb = { version = "3", default-features = false, features = ["bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls", "zlib-compression", "zstd-compression", "snappy-compression"] }
once_cell = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
