[package]
name = "headend-gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-sns = "1"
aws-sdk-sqs = "1"
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
dotenvy = "0.15"
futures-util = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
aws-config = "1"
aws-sdk-sns = "1"
futures = "0.3"
native-tls = "0.2"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
