[package]
name = "pki-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
ipnet = "2"
jsonwebtoken = { version = "10", default-features = false, features = [
    "aws_lc_rs",
    "use_pem",
] }
once_cell = "1"
p256 = { version = "0.13", features = ["pkcs8"] }
pem = "3"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
x509-parser = { version = "0.18", default-features = false, features = [
    "verify",
] }

[dev-dependencies]
futures = "0.3"
